tests/test-files/define-type-alias.txt
================================================================================
1 Define type alias
================================================================================

(package coalton-unit-tests)

(define-type-alias Index Integer)

================================================================================
2 Define type alias
================================================================================

(package coalton-unit-tests)

(define-type-alias UnaryIntegerOperator (Integer -> Integer))

================================================================================
3 Define type alias
================================================================================

(package coalton-unit-tests)

(define-type-alias (UnaryOperator :a) (:a -> :a))

================================================================================
4 Define type alias
================================================================================

(package coalton-unit-tests)

(define-type-alias (ReverseTranslationRules :a :b) (:b -> :a))

================================================================================
5 Define type alias
================================================================================

(package coalton-unit-tests)

(define-type-alias Index Integer)

(define-type-alias MyIndex Index)

(define-type-alias (Collection :a) (List :a))

(define-type-alias MyIndices (Collection MyIndex))

================================================================================
100 define-type-alias, parse-error
================================================================================

(package test-package)

(define-type-alias "Index" UFix)

--------------------------------------------------------------------------------

error: Malformed type alias definition
  --> test:3:19
   |
 3 |  (define-type-alias "Index" UFix)
   |                     ^^^^^^^ expected symbol

================================================================================
101 define-type-alias, parse-error
================================================================================

(package test-package)

(define-type-alias Index UFix
  "An index"
  "A really good index")

--------------------------------------------------------------------------------

error: Malformed type alias definition
  --> test:5:2
   |
 5 |    "A really good index")
   |    ^^^^^^^^^^^^^^^^^^^^^ unexpected trailing form

================================================================================
102 define-type-alias, type variables
================================================================================

(package test-package)

(define-type-alias (Collection :a) (List :b))

--------------------------------------------------------------------------------

error: Unknown type variable
  --> test:3:41
   |
 3 |  (define-type-alias (Collection :a) (List :b))
   |                                           ^^ Unknown type variable :B

================================================================================
103 define-type-alias, type variables
================================================================================

(package test-package)

(define-type-alias (Collection :a) (List Integer))

--------------------------------------------------------------------------------

error: Alias type variable defined but never used
  --> test:3:0
   |
 3 |  (define-type-alias (Collection :a) (List Integer))
   |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Type alias COLLECTION defines unused type variable :A

================================================================================
104 define-type-alias, type errors
================================================================================

(package test-package)

(define-type-alias Index UFix)

(define-type-alias MyIndex Index)

(define-type-alias (UnaryOperator :a) (:a -> :a))

(declare increment-my-index (UnaryOperator MyIndex))
(define increment-my-index (+ 1))

(declare x Integer)
(define x 5)

(define new-x (increment-my-index x))

--------------------------------------------------------------------------------

error: Type mismatch
  --> test:15:34
    |
 15 |  (define new-x (increment-my-index x))
    |                                    ^ Expected type '[MYINDEX := INDEX := UFIX]' but got 'INTEGER'



